force-app/main/default/objects/Annual_Student_Information__c.object
<CustomObject>
    <description>Student data that is specific to a school year is stored on the Annual Student Information object. All records will include a school year code to indicate what year the record applies for. There may be multiple Annual Student Information records for a single Program Enrollment to track data across multiple years.</description>
    <fields>
        <fullName>APSCallBackNotes__c</fullName>
        <description>APS Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>APS Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APSCallBackTimestamp__c</fullName>
        <description>APS Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>APS Call Back Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APSCallBackType__c</fullName>
        <description>Call Back Type (to be used by APS only)</description>
        <label>Call Back Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Documentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APSCallBack__c</fullName>
        <description>APS Call Back</description>
        <label>APS Call Back</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attempted</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APSFutureContactDate__c</fullName>
        <description>APS Future Contact Date (to be used by APS only)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>APS Future Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APSPostponeContact__c</fullName>
        <description>Placement Postpone Outbound Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Placement Postpone Outbound Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Call_Back__c</fullName>
        <description>APS Call Back</description>
        <label>APS Call Back</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attempted</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APS_Future_Contact_Date__c</fullName>
        <description>APS Future Contact Date (to be used by APS only)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>APS Future Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_PlacedTimeStamp__c</fullName>
        <description>Date and Time Student was Placed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date and Time Student was Placed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Academic_Documentation_Summary__c</fullName>
        <label>Academic Documentation Summary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutomatedPlacementExclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude the Student from AutoPlacement</description>
        <label>AutomatedPlacementExclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutomatedPlacementScore__c</fullName>
        <description>Automated Placement Score</description>
        <label>AutomatedPlacementScore</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_During_SY__c</fullName>
        <description>Country where student will be residing and conducting schoolwork during the academic year</description>
        <label>Country During SY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Akrotiri</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ashmore and Cartier Islands</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Bassas da India</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoursesFinalized__c</fullName>
        <label>Courses Finalized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_and_Time_APS_Call_Back_Requested__c</fullName>
        <description>Date and Time APS Call Back was Requested</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date and Time APS Call Back Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaysInInterventionProcess__c</fullName>
        <description>Days In Intervention Process</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Days in Intervention Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_in_Intervention_Process__c</fullName>
        <description>Days In Intervention Process</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Days in Intervention Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ever_in_Gifted_Program__c</fullName>
        <label>Ever in Gifted Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclude_AutoCourse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Automatic Course Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Grade_Level__c</fullName>
        <label>Final Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>Transitional K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Year_Track_Request__c</fullName>
        <description>Pace selection</description>
        <label>Full Year Track Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accelerated</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GiftedProgramRequest_LA_M_S__c</fullName>
        <description>Which gifted courses are requested for the student?</description>
        <label>GiftedProgramRequest LA M S</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Language Arts</fullName>
                </value>
                <value>
                    <fullName>Math</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Accelerated Math</fullName>
                </value>
                <value>
                    <fullName>Enriched Language Arts</fullName>
                </value>
                <value>
                    <fullName>Enriched Science</fullName>
                </value>
                <value>
                    <fullName>Gifted and Talented Language Arts</fullName>
                </value>
                <value>
                    <fullName>Gifted and Talented Math</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade_8_Next_Years_Math_Course__c</fullName>
        <label>Grade 8 Next Years Math Course</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Algebra 1</fullName>
                </value>
                <value>
                    <fullName>Geometry</fullName>
                </value>
                <value>
                    <fullName>Pre-Algebra</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade_Level_Completed__c</fullName>
        <description>The grade level completed during the school year.</description>
        <label>Grade Level Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
                <value>
                    <fullName>None- entering kindergarten for the first time.</fullName>
                </value>
                <value>
                    <fullName>None- student was not enrolled during the school year.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade_Level_Requested__c</fullName>
        <description>The grade level the student is requesting for the school year.</description>
        <label>Grade Level Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HH_Income_Foster_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HH Income Foster Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSCoursesinMiddleSchool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HS Courses in Middle School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_Courses_in_Middle_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HS Courses in Middle School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_LTS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>High School LTS</description>
        <label>High School LTS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HS_NCAA_Interest__c</fullName>
        <description>Does the student have any interest in seeking initial eligibility through the National Collegiate Athletic Association (NCAA) to play a sport when he or she enters college?</description>
        <label>NCCA Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_SAT_ACT_Options__c</fullName>
        <description>Has the student taken the SAT and/or ACT?</description>
        <label>SAT/ACT Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>SAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Homeschool_Eval_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has an annual homeschool evaluation been completed for the student?</description>
        <label>Homeschool Eval Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HowStudentPlacementCompleted__c</fullName>
        <label>Student&apos;s Placement was Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCA Expedited Auto-Placement Process</fullName>
                </value>
                <value>
                    <fullName>CCA Expedited Manual Process</fullName>
                </value>
                <value>
                    <fullName>Modified Auto-Placement Process</fullName>
                </value>
                <value>
                    <fullName>School Recommended Auto-Placement Process</fullName>
                </value>
                <value>
                    <fullName>Standard Auto-Placement Process</fullName>
                </value>
                <value>
                    <fullName>Standard Manual Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LA_Placement_Level__c</fullName>
        <label>Language Arts Placement Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>Gifted Language Arts 3</fullName>
                </value>
                <value>
                    <fullName>Gifted Language Arts 4</fullName>
                </value>
                <value>
                    <fullName>Gifted Language Arts 5</fullName>
                </value>
                <value>
                    <fullName>Gifted Language Arts 6</fullName>
                </value>
                <value>
                    <fullName>Gifted Language Arts 7</fullName>
                </value>
                <value>
                    <fullName>Gifted Language Arts 8</fullName>
                </value>
                <value>
                    <fullName>Compass Language Arts</fullName>
                </value>
                <value>
                    <fullName>HS Compass Language Arts</fullName>
                </value>
                <value>
                    <fullName>Connected Language Arts</fullName>
                </value>
                <value>
                    <fullName>Extended Language Arts</fullName>
                </value>
                <value>
                    <fullName>Transitional K</fullName>
                </value>
                <value>
                    <fullName>Alternative Language Arts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Math_Placement_Level__c</fullName>
        <label>Math Placement Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>Algebra 1</fullName>
                </value>
                <value>
                    <fullName>Algebra 1 A Parts ½</fullName>
                </value>
                <value>
                    <fullName>Algebra 1 B Parts ½</fullName>
                </value>
                <value>
                    <fullName>Algebra 1 Foundations</fullName>
                </value>
                <value>
                    <fullName>Algebra 2</fullName>
                </value>
                <value>
                    <fullName>Algebra 2 Foundations</fullName>
                </value>
                <value>
                    <fullName>Algebra Readiness</fullName>
                </value>
                <value>
                    <fullName>Compass Math (Special Education Only)</fullName>
                </value>
                <value>
                    <fullName>Connected Math</fullName>
                </value>
                <value>
                    <fullName>Essential Algebra Readiness</fullName>
                </value>
                <value>
                    <fullName>Essential Math 3</fullName>
                </value>
                <value>
                    <fullName>Essential Math 4</fullName>
                </value>
                <value>
                    <fullName>Essential Math 5</fullName>
                </value>
                <value>
                    <fullName>Essential Math 6</fullName>
                </value>
                <value>
                    <fullName>Essential Math 7</fullName>
                </value>
                <value>
                    <fullName>Extended Math</fullName>
                </value>
                <value>
                    <fullName>Geometry</fullName>
                </value>
                <value>
                    <fullName>Geometry Foundations</fullName>
                </value>
                <value>
                    <fullName>Gifted Math 3 (Math 3 &amp; 4)</fullName>
                </value>
                <value>
                    <fullName>Gifted Math 4 (Math 5)</fullName>
                </value>
                <value>
                    <fullName>Gifted Math 5 (Math 7)</fullName>
                </value>
                <value>
                    <fullName>Gifted Math 6 (Algebra Readiness)</fullName>
                </value>
                <value>
                    <fullName>Gifted Math 7 (Algebra 1)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Years_Math_Course__c</fullName>
        <description>What math course is your student scheduled to take during the school year in which you are enrolling</description>
        <label>Next Years Math Course</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Algebra</fullName>
                </value>
                <value>
                    <fullName>Algebra 2</fullName>
                </value>
                <value>
                    <fullName>Geometry</fullName>
                </value>
                <value>
                    <fullName>Math 3</fullName>
                </value>
                <value>
                    <fullName>Math 4</fullName>
                </value>
                <value>
                    <fullName>Math 5</fullName>
                </value>
                <value>
                    <fullName>Math 6</fullName>
                </value>
                <value>
                    <fullName>Math 7</fullName>
                </value>
                <value>
                    <fullName>Pre-Algebra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes for annual student information</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PAH_ElecGradeLevel_1__c</fullName>
        <description>Prior Academic History Elective Grade Level</description>
        <label>PAH Elective Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
                <value>
                    <fullName>Pre-Kindergarten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAH_LAGradeLevel_1__c</fullName>
        <description>Prior Academic History LA Grade Level</description>
        <label>PAH LA Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
                <value>
                    <fullName>Pre-Kindergarten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAH_MathGradeLevel_1__c</fullName>
        <description>Prior Academic History Math Grade Level</description>
        <label>PAH Math Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
                <value>
                    <fullName>Pre-Kindergarten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>